# photonai_icu

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  setup.cfg
.github/: rename_project.sh
api/DummyTransformer/: index.html
docs/: index.md
docs/api/: DummyTransformer.md
examples/: data.csv  resampler.ipynb  transformer.ipynb
examples/DummyTransformer/: DummyTransformer_example.ipynb
examples/resampler/: index.html
photonai_icu/: __init__.py  photonai_icu.json  version.py
photonai_icu/dummy/: __init__.py
photonai_icu/resampler/: ResamplerTransformer.py  __init__.py
photonai_icu/transformer/: ResamplerTransformer.py  __init__.py
test/dummy_tests/: test_dummy.py
