[metadata]
name = photonai_icu
description_file = README.md
long_description_content_type = text/markdown
author = aidh-ms
author_email = insert_your@email
url = https://github.com//photonai_icu/
keywords=
    machine learning
    deep learning
project_urls=
    Source Code = https://github.com/aidh-ms/photonai_icu/
    Documentation = https://aidh-ms.github.io/photonai_icu/
    Bug Tracker = https://github.com/aidh-ms/photonai_icu/issues

download_url=https://pypi.org/project/photonai_icu/#files

[files]
packages = photonai_icu